--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
 
+  <script src="scripts.js"></script>
+
   <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
@@ -42,47 +44,6 @@
 	<span class="poster">Poster</span>
 </div>
 
-<script>
-
-function someFunc() {
-	if (!$("input[name='movie']").val()) {
-   alert('Empty field, put something!');
-   return false;
-}
-}
-
-var $Form = $('form'), $Container = $('#jsonHolder');
-$Container.hide();
-$Form.on('submit', function(p_oEvent){
-    var sUrl, sMovie, oData;
-    p_oEvent.preventDefault();
-sMovie = $Form.find('input').val();
-var regex = /^tt/i.test(sMovie);
-//var found = sMovie.test(regex);
-console.log(regex);
-
-	if (regex == true) {
-    sUrl = 'http://www.omdbapi.com/?i=' + sMovie + '&type=movie&tomatoes=true';
-  }
-  else {
-    sUrl = 'http://www.omdbapi.com/?t=' + sMovie + '&type=movie&tomatoes=true';
-  }
-
-    $.ajax(sUrl, {
-        complete: function(p_oXHR, p_sStatus){
-            oData = $.parseJSON(p_oXHR.responseText);
-            console.log(oData);
-            $Container.find('.title').text(oData.Title);
-            $Container.find('.year').text(oData.Year);
-            $Container.find('.genre').text(oData.Genre);
-            $Container.find('.plot').text(oData.Plot);
-            $Container.find('.poster').html('<img src="' + oData.Poster + '"/>');
-            $Container.show();
-        }
-    });    
-});
-
-</script>
 </div>
 </div>
 </body>
