cleaned up shit and made input system better. if user inputs nothing, it doesn't go through anymore and alerts the user

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <p>For example: the ID from this URL: http://www.imdb.com/title/tt0780504/ is this <b>tt0780504</b></p>
 </div>
 
-<form name="movieForm" onsubmit="return someFunc()">
+<form name="movieForm">
  		<label>
  		<input type="text" id="search" name="movie" placeholder="Movie title or IMDb ID" />
  		</label>   
